# closeknit

./: .env.test  .gitignore  Dockerfile  README.md  fly.toml  manage.py  pyproject.toml  requirements.txt
backend/: admin.py  forms.py  models.py  services.py  tests.py  urls.py  views.py
backend/management/commands/: weekly_summary_campaign.py
backend/migrations/: 0001_initial.py  0002_alter_subscription_shared_to.py  0002_item_lease.py  0003_alter_subscription_shared_to.py  0003_invite.py  0004_alter_community_members.py  0004_item_item_type.py  0005_auto_20240919_0439.py  0005_community_invite_uuid.py  0006_auto_20240919_0428.py  0006_delete_invite.py  0007_item_shared_with_subscription_shared_with.py  0008_request.py
backend/static/css/: styles.css
backend/templates/account/: login.html
backend/templates/backend/: about.html  base.html  discover.html  index.html  profile.html
backend/templates/backend/_partials/: community_listing.html  item_listing.html  landing_page.html  lease_listing.html  request_listing.html  subscription_listing.html
backend/templates/backend/community/: add_member.html  cud.html  detail.html  list.html  remove_member.html
backend/templates/backend/invite/: confirm_invite.html  send_invite.html  show_invite_link.html
backend/templates/registration/: login.html  logout.html  signup.html
backend/templates/socialaccount/: login.html
closeknit/: asgi.py  settings.py  urls.py  wsgi.py
subshare/: asgi.py  settings.py  urls.py  wsgi.py
tribepool/: asgi.py  settings.py  urls.py  wsgi.py
(+17 files in other folders)
