[project]
name = "closeknit"
version = "0.1.0"
description = "A platform to share items & subscriptions in your community"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crispy-bulma>=0.11.0",
    "dj-database-url>=2.3.0",
    "django>=5.1.3",
    "django-allauth[mfa,saml,socialaccount,steam]>=65.2.0",
    "django-anymail[brevo]>=12.0",
    "django-crispy-forms>=2.3",
    "django-select2>=8.2.1",
    "django-tailwind[reload]>=3.8.0",
    "django-widget-tweaks>=1.5.0",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "whitenoise>=6.8.2",
]
